--- a/assets/css/wall.css
+++ b/assets/css/wall.css
@@ -55,7 +55,14 @@ body{
     margin-right: 5px;
   }
   .load_comment{
-    margin-left:50px; margin-right:50px; margin-bottom:5px; background-color:#f2f2f2; height:10px; padding:5px; width:300px; font-size:14px;
+    margin-left:50px; 
+    margin-right:50px; 
+    margin-bottom:5px; 
+    background-color:#f2f2f2; 
+    min-height:10px; 
+    padding:5px; 
+    width:300px; 
+    font-size:14px;
   }
   .flash_load{
     margin-left:50px; margin-right:50px; margin-bottom:5px;height:20px; padding:6px; width:400px; 
