--- a/assets/css/wall.css
+++ b/assets/css/wall.css
@@ -278,14 +278,14 @@ text-decoration:none;
 .stdelete 
 {
   background-image: url("../img/delete.png");
-font-weight:bold;
-float:right;
-cursor:pointer;
-height: 14px;
-width: 14px;
-margin-top: 5px;
-margin-right: 5px;
-display:none;
+  font-weight:bold;
+  float:right;
+  cursor:pointer;
+  height: 14px;
+  width: 14px;
+  margin-top: 5px;
+  margin-right: 5px;
+  display:none;
 }
 
 .icontext
@@ -312,8 +312,9 @@ display:none;
     margin-left:70%;
 }
 #noti_content {
-    margin-left:70%;
+    margin-left:67%;
     display:none;
+
 }
 .noti_bubble {
     position:absolute;    /* This breaks the div from the normal HTML document. */
@@ -334,12 +335,9 @@ display:none;
 
 
 
-  #noti_content ul {list-style: none;padding: 0px;margin: 0px; z-index: 9999; z-index:1000; position: relative}
-  #noti_content ul li {display: block;position: relative;float: left;border:1px solid #000}
+  #noti_content ul { line-height:17px; list-style: none;padding: 0px;margin: 0px; z-index:1000; position: relative;}
+  #noti_content ul li {padding:10px; display: block;position: relative;float: left;border:1px solid #000; background-color: #fff;}
   #noti_content li ul {display: none;}
-  #noti_content ul li a {display: block;background: #000;padding: 5px 10px 5px 10px;text-decoration: none;
-           white-space: nowrap;color: #fff;}
-  #noti_content ul li a:hover {background: #f00;}
-  #noti_content li:hover li {float: none;}
-  #noti_content li:hover a {background: #f00;}
-  #noti_content li:hover li a:hover {background: #000;}
+  #noti_content ul li a {display: block; text-decoration: none;
+           white-space: nowrap;}
+  #noti_content ul li:hover {background: #eceff5!important; cursor:pointer;}
