--- a/assets/css/wall.css
+++ b/assets/css/wall.css
@@ -1,369 +1,542 @@
-body{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
+body {
     background-color: #e8eaed;
-
-  }
-  .delete_button
-  {
-  background-image: url("../img/delete.png");
-  font-weight:bold;
-  float:right;
-  cursor:pointer;
-  height: 14px;
-  width: 14px;
-  display:none;
-  }
-  .comment_box{
-    background-color:#fff; border-bottom:#ffffff solid 1px; padding-top:3px
-  }
-
-  h1{
-    color:#555555
-  }
-  a{
-    text-decoration:none;
-    color:#d02b55;
-  }
-  a:hover{
-    text-decoration:underline;
-    color:#d02b55;
-  }
-  *{margin:0;padding:0;}
-
-  .comment_button{
-    margin-right:10px; 
-    color: #006699;
-    text-decoration: none;
-  }
-  .like_button{
-    margin-right:10px; 
-    color: #006699;
-    text-decoration: none;  
-  }
-  .playlist_button{
-    margin-right:10px; 
-    color: #006699;
-    text-decoration: none;
-  }
-  .share_button{
-    margin-right:10px; 
-    color: #006699;
-    text-decoration: none;
-  }
-
-  .like {
-    background: url('../img/like.png') no-repeat;
-    height:14px;
-    padding-left:18px;
-    margin-right:20px;
-    font-weight:bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
-  .comment{
-background: url('../img/comment.png') no-repeat;
+
+h1 {
+    color: #555555;
 }
-  .share_button{
+
+a {
+    color: #d02b55;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #d02b55;
+    text-decoration: underline;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/*noti part*/
+
+#noti_Container {
+    margin-left: 73.5%;
+    margin-top: 10px;
+    position: relative;
+    height: 9px;
+}
+
+#nav {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+#nav li {
+    float: left;
+    margin-right: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+#nav li a {
+    color: #333333;
+    text-decoration: none;
+}
+
+#nav li a:hover {
     color: #006699;
     text-decoration: none;
-  }
-  .comment_submit{
-    background-color:#3b59a4; color:#FFFFFF; border:none; font-size:11px; padding:3px; margin-top:3px;
-  }
-  .panel{
-    margin-left:32px; 
-    margin-right:50px; 
-    margin-bottom:5px; 
-    background-color:#fff; 
-    height:45px; 
-    padding:6px; 
-    width:363px;
-    
-  }
-  .cmtpic{
+}
+
+#notification_li {
+    position: relative;
+}
+
+#notificationContainer {
+    background-color: #fff;
+    border: 1px solid rgba(100, 100, 100, .4);
+    -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    overflow: visible;
+    position: absolute;
+    top: 30px;
+    margin-left: -170px;
+    width: 300px;
+    z-index: 99;
+    display: none;
+}
+
+#notificationContainer:before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    color: transparent;
+    border: 10px solid black;
+    border-color: transparent transparent white;
+    margin-top: -20px;
+    margin-left: 188px;
+}
+
+#notificationTitle {
+    z-index: 1000;
+    font-weight: bold;
+    padding: 8px;
+    font-size: 13px;
+    background-color: #ffffff;
+    width: 284px;
+    border: 1px solid #000;
+}
+
+#notificationsBody {
+    padding: 8px 0px 0px 0px !important;
+    min-height: 300px;
+}
+
+#notificationFooter {
+    background-color: #e9eaed;
+    text-align: center;
+    font-weight: bold;
+    padding: 8px;
+    font-size: 12px;
+    border-top: 1px solid #dddddd;
+}
+
+#notification_count {
+    padding: 3px 7px 3px 7px;
+    background: #cc0000;
+    color: #ffffff;
+    font-weight: bold;
+    margin-left: 77px;
+    border-radius: 9px;
+    position: absolute;
+    margin-top: -11px;
+    font-size: 11px;
+}
+
+#friend_li {
+    position: relative;
+}
+
+#friendContainer {
+    background-color: #fff;
+    border: 1px solid rgba(100, 100, 100, .4);
+    -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    overflow: visible;
+    position: absolute;
+    top: 30px;
+    margin-left: -170px;
+    width: 300px;
+    z-index: 99;
+    display: none;
+}
+
+#friendContainer:before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    color: transparent;
+    border: 10px solid black;
+    border-color: transparent transparent white;
+    margin-top: -20px;
+    margin-left: 188px;
+}
+
+#friendTitle {
+    z-index: 1000;
+    font-weight: bold;
+    padding: 8px;
+    font-size: 13px;
+    background-color: #ffffff;
+    width: 284px;
+    border: 1px solid #000;
+}
+
+#friendBody {
+    padding: 8px 0px 0px 0px !important;
+    min-height: 300px;
+}
+
+#friendFooter {
+    background-color: #e9eaed;
+    text-align: center;
+    font-weight: bold;
+    padding: 8px;
+    font-size: 12px;
+    border-top: 1px solid #dddddd;
+}
+
+#friend_count {
+    padding: 3px 7px 3px 7px;
+    background: #cc0000;
+    color: #ffffff;
+    font-weight: bold;
+    margin-left: 42px;
+    border-radius: 9px;
+    position: absolute;
+    margin-top: -11px;
+    font-size: 11px;
+}
+
+#friendBody>ul>li {
+    border-bottom: 1px solid #ddd;
+    padding-top: 10px;
+}
+
+#notificationsBody>ul>li {
+    border-bottom: 1px solid #ddd;
+    padding-top: 10px;
+}
+
+.noti {
+    display: block;
+    margin-left: 25px;
+    overflow: hidden;
+    padding: 4px 0;
+    width: 250px;
+    word-wrap: break-word;
+}
+
+.noti img {
     float: left;
     height: 33px;
-    width: 33px;
-    border: solid 1px #dedede;
-    padding: 1px;
-    margin-right: 5px;
-  }
-  .load_comment{
-    margin-left: 40px;
-    word-wrap: break-word;
-    overflow: hidden;
-    display: block;
-  }
-  .noti{
-    margin-left: 40px;
-    word-wrap: break-word;
-    overflow: hidden;
-    display: block;
-    padding:4px 0;
-    width:250px;
-  }
-  .noti img {
-    width: 33px;
-    height: 33px;
-    vertical-align: middle;
     margin-right: 7px;
-    float: left;
-  }
+    vertical-align: middle;
+    width: 33px;
+}
 
-  .flash_load{
-    margin-left:50px; margin-right:50px; margin-bottom:5px;height:20px; padding:6px; width:400px; 
-    display:none; 
-  }
-  .stbody{
-  min-height:70px;
-  margin-bottom:10px;
-  border-bottom:dashed 1px #cc0000;
-  }
-  .staction{
-  border-top:1px dashed #dedede;
-  padding-top: 8px;
-  }
-  .stimg{
-    float:left;
-    height:50px;
-    width:50px;
-    border:solid 1px #dedede;
-  }
-  .sttext{
-  line-height: 20px;
-  margin-left: 70px;
-  min-height: 50px;
-  word-wrap: break-word;
-  overflow: hidden;
-  display: block;
-  font-size: 13px;
-  background-color: #ffffff;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  }
-  .sttext b{
+/*timeline part*/
+.delete_button {
+    background-image: url("../img/delete.png");
+    cursor: pointer;
+    display: none;
+    float: right;
+    font-weight: bold;
+    height: 14px;
+    width: 14px;
+}
+
+.comment_box {
+    background-color: #fff;
+    border-bottom: #ffffff solid 1px;
+    padding-top: 3px;
+}
+
+.comment_button {
     color: #006699;
-  }
-  .sttime
-  {
-  margin:-5px 0px 10px 0px;
-  }
-  .timeago
-{
-  color:#999999;
-  text-decoration:none; 
+    margin-right: 10px;
+    text-decoration: none;
 }
-  .timeago{
-    height:14px;
-  padding-right:18px;
-  margin-right:20px;
-  text-transform:uppercase;
-  font-size:9px;
-  background:url('../img/timelite.png') right no-repeat;
-  }
-  .noti_like{
-  height:14px;
-  padding-left:18px;
-  font-size:11px;
-  background:url('../img/like.png') left no-repeat !important;
-  }
-  .likeUsers{
-border-top: 1px solid #e1e1e1;
-border-bottom: 1px solid #e1e1e1;
-margin-top: 10px;
-padding: 10px 10px 0px 0px;
-color: #7c7c8e !important;
+
+.like_button {
+    color: #006699;
+    margin-right: 10px;
+    text-decoration: none;
 }
-  #container{width:80%; margin: 0 auto; }
-    .item {
-    width: 42%;
-    margin: 20px 10px 10px 10px;
+
+.playlist_button {
+    color: #006699;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.share_button {
+    color: #006699;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.like {
+    background: url('../img/like.png') no-repeat;
+    font-weight: bold;
+    height: 14px;
+    margin-right: 20px;
+    padding-left: 18px;
+}
+
+.comment {
+    background: url('../img/comment.png') no-repeat;
+}
+
+.share_button {
+    color: #006699;
+    text-decoration: none;
+}
+
+.comment_submit {
+    background-color: #3b59a4;
+    border: none;
+    color: #FFFFFF;
+    font-size: 11px;
+    margin-top: 3px;
+    padding: 3px;
+}
+
+.panel {
+    background-color: #fff;
+    height: 45px;
+    margin-bottom: 5px;
+    margin-left: 32px;
+    margin-right: 50px;
+    padding: 6px;
+    width: 363px;
+}
+
+.cmtpic {
+    border: solid 1px #dedede;
     float: left;
-    background-color:#fff;
-    border:solid 1px #B4BBCD;
-    min-height:50px;
-    text-align:justify;
-    word-wrap:break-word;
-    position:relative; 
-  }
-    .timeline_container{
-      width: 16px;
-      text-align: center;
-      margin: 0 auto;
-      cursor:pointer;
-      display: block;
-  }
-  .timeline{
-      margin: 0 auto;
-      background-color:#e08989;
-      display: block;
-      float: left;
-      height: 100%;
-      left: 473px;
-      margin-top: 10px;
-      position: absolute;
-      width: 4px;
-  }
-    .rightCorner { 
+    height: 33px;
+    margin-right: 5px;
+    padding: 1px;
+    width: 33px;
+}
+
+.load_comment {
+    display: block;
+    margin-left: 40px;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+
+.flash_load {
+    display: none;
+    height: 20px;
+    margin-bottom: 5px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 6px;
+    width: 400px;
+}
+
+.stbody {
+    border-bottom: dashed 1px #cc0000;
+    margin-bottom: 10px;
+    min-height: 70px;
+}
+
+.staction {
+    border-top: 1px dashed #dedede;
+    padding-top: 8px;
+}
+
+.stimg {
+    border: solid 1px #dedede;
+    float: left;
+    height: 50px;
+    width: 50px;
+}
+
+.strmsg {
+    margin-top: 17px;
+    margin-bottom: 7px;
+}
+
+.sttext {
+    background-color: #ffffff;
+    border-radius: 4px;
+    display: block;
+    font-size: 13px;
+    line-height: 20px;
+    margin-left: 70px;
+    min-height: 50px;
+    moz-border-radius: 4px;
+    overflow: hidden;
+    webkit-border-radius: 4px;
+    word-wrap: break-word;
+}
+
+.sttext b {
+    color: #006699;
+    font-size: 17px;
+}
+
+.sttime {
+    margin: 2px 0px 10px 0px;
+}
+
+.timeago {
+    color: #999999;
+    text-decoration: none;
+}
+
+.timeago {
+    background: url('../img/timelite.png') right no-repeat;
+    font-size: 9px;
+    height: 14px;
+    margin-right: 20px;
+    padding-right: 18px;
+    text-transform: uppercase;
+}
+
+.noti_like {
+    background: url('../img/like.png') left no-repeat !important;
+    font-size: 11px;
+    height: 14px;
+    padding-left: 18px;
+}
+
+.likeUsers {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    color: #7c7c8e !important;
+    margin-top: 10px;
+    padding: 10px 10px 0px 0px;
+}
+
+#container {
+    margin: 0 200px;
+    width: 80%;
+}
+
+.item {
+    background-color: #fff;
+    border: solid 1px #B4BBCD;
+    float: left;
+    margin: 20px 10px 10px 10px;
+    min-height: 50px;
+    position: relative;
+    text-align: justify;
+    width: 42%;
+    word-wrap: break-word;
+}
+
+.timeline_container {
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: 16px;
+}
+
+.timeline {
+    background-color: #e08989;
+    display: block;
+    float: left;
+    height: 100%;
+    left: 473px;
+    margin: 0 auto;
+    margin-top: 10px;
+    position: absolute;
+    width: 4px;
+}
+
+.rightCorner {
     background-image: url("../img/right.png");
     display: block;
     height: 15px;
     margin-left: 453px;
     margin-top: 8px;
     padding: 0;
+    position: absolute;
     vertical-align: top;
     width: 13px;
-    z-index:2;
-    position: absolute;
-  }
-  .leftCorner{
+    z-index: 2;
+}
+
+.leftCorner {
     background-image: url("../img/left.png");
     display: block;
     height: 15px;
-    width: 13px;
     margin-left: -13px;
     margin-top: 8px;
     position: absolute;
-    z-index:2;
-  }
-  .deletebox {
-    font-weight: bold;
-    float: right;
-    text-decoration: none;
-    margin: 8px 10px 8px 10px;
+    width: 13px;
+    z-index: 2;
+}
+
+.deletebox {
     color: #cc0000;
-    position: relative;
-    top: 0px;
-    right: 0px;
-  }
-
-.timeline:hover{cursor: pointer;margin: 0 auto;}
-.timeline div.plus{width: 14px;height: 14px;position: relative;left: -6px;}
-
-  .popup {
-      width: 300px;
-      display:none;
-  }
-
-  .popup>img{
-      float:left;
-      margin-right: 20px;
-  }
-  .popup h2 
-  {
-    float:right;
-    margin-right: 60px;
-      color:  #E3E5DD;
-      font-size: 14px;
-  }
-  .popup h2 a
-  {
-      color:  #E3E5DD!important;
-  }
-
-  .sttext_content2
-{
-padding:12px 12px 2px 12px;
-background-color:#fafcfb;
-line-height: 19px;
-}
-
-.sttext_content
-{
-margin:12px 12px 0px 12px;
-}
-.sttext_content a
-{
-color:#3b5998;
-text-decoration:none;
-}
-.sttext_content a:hover
-{
-color:#000000;
-text-decoration:none;
-}
-
-.stdelete 
-{
-  background-image: url("../img/delete.png");
-  font-weight:bold;
-  float:right;
-  cursor:pointer;
-  height: 14px;
-  width: 14px;
-  margin-top: 5px;
-  margin-right: 5px;
-  display:none;
-}
-
-.icontext
-{
-  height:14px;
-  padding-left:18px;
-  margin-right:20px;
-  
-  font-weight:bold;
-  
-}
-
-.loadplace{
- 
-  padding: 5px 0px 5px 0px;
-}
-
-#noti_Container {
-    position:relative;     /* This is crucial for the absolutely positioned element */
-    width:100px;
-    height:16px;
-    margin-top: 5px;
-    margin-left:77.5%;
-}
-#noti_content {
-    margin-left:61%;
-    display:none;
-}
-
-.noti_bubble {
-    position:absolute;    /* This breaks the div from the normal HTML document. */
-    top: -6px;
-    right:10px;
-    padding:1px 2px 1px 2px;
-    background-color:red; /* you could use a background image if you'd like as well */
-    color:white;
-    font-weight:bold;
-    font-size:0.55em;
-    border-radius:30px;
-    box-shadow:1px 1px 1px gray;
-}
-
-.friend_bubble {
-    position: absolute;
-    top: -5px;
-    right: 80px;
-    padding: 1px 2px;
-    background-color: #F00;
-    color: #FFF;
+    float: right;
     font-weight: bold;
-    font-size: 0.55em;
-    border-radius: 30px;
-    box-shadow: 1px 1px 1px #808080;
-    width: 4px;
-    height: 9px;
+    margin: 8px 10px 8px 10px;
+    position: relative;
+    right: 0px;
+    text-decoration: none;
+    top: 0px;
 }
 
-  #noti_content ul,#friend_content ul { line-height:17px; list-style: none;padding: 0px;margin: 0px; z-index:1000; position: relative;}
-  #noti_content ul li,#friend_content ul li {padding:10px; display: block;position: relative;float: left;border:1px solid #000; background-color: #fff;}
-  #noti_content li ul,#friend_content li ul {display: none;}
-  #noti_content ul li a,#friend_content ul li a {display: block; text-decoration: none;
-           white-space: nowrap;}
-  #noti_content ul li:hover,#friend_content ul li:hover {background: #eceff5!important; cursor:pointer;}
-
-
-#friend_content {
-    margin-left:61%;
-    display:none;
+.timeline:hover {
+    cursor: pointer;
+    margin: 0 auto;
 }
 
-#friend{
-  margin-right: 50px;
+.timeline div.plus {
+    height: 14px;
+    left: -6px;
+    position: relative;
+    width: 14px;
+}
+
+.popup {
+    display: none;
+    width: 300px;
+}
+
+.popup>img {
+    float: left;
+    margin-right: 20px;
+}
+
+.popup h2 {
+    color: #E3E5DD;
+    float: right;
+    font-size: 14px;
+    margin-right: 60px;
+}
+
+.popup h2 a {
+    color: #E3E5DD!important;
+}
+
+.sttext_content2 {
+    background-color: #fafcfb;
+    line-height: 19px;
+    padding: 12px 12px 2px 12px;
+}
+
+.sttext_content {
+    margin: 12px 12px 0px 12px;
+}
+
+.sttext_content a {
+    color: #3b5998;
+    text-decoration: none;
+}
+
+.sttext_content a:hover {
+    color: #000000;
+    text-decoration: none;
+}
+
+.stdelete {
+    background-image: url("../img/delete.png");
+    cursor: pointer;
+    display: none;
+    float: right;
+    font-weight: bold;
+    height: 14px;
+    margin-right: 5px;
+    margin-top: 5px;
+    width: 14px;
+}
+
+.icontext {
+    font-weight: bold;
+    height: 14px;
+    margin-right: 20px;
+    padding-left: 18px;
+}
+
+.loadplace {
+    padding: 5px 0px 5px 0px;
 }
