--- a/assets/css/wall.css
+++ b/assets/css/wall.css
@@ -641,3 +641,50 @@ margin-bottom:5px;
 padding:6px 4px 3px 0px;
 width:350px; 
 }
+
+
+#searchbox
+{
+width:250px;
+border:solid 1px #000;
+padding:3px;
+}
+#display
+{
+width:250px;
+display:none;
+float:right; margin-right:30px;
+border-left:solid 1px #dedede;
+border-right:solid 1px #dedede;
+border-bottom:solid 1px #dedede;
+overflow:hidden;
+}
+.display_box
+{
+padding:4px; border-top:solid 1px #dedede; font-size:12px; height:30px;
+position:relative;
+}
+
+.display_box:hover,
+{
+background:#3b5998;
+color:#FFF!important;
+text-decoration: none;
+}
+
+.display_box a {
+    color:black;
+    font-size: 14px;
+    font-weight: bold;
+text-decoration: none;
+}
+
+.display_box button {
+    right: 10px;
+    position:absolute;
+}
+#shade
+{
+background-color:#00CCFF;
+
+}
